<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/set_password_tip"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/set_password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="10dp"
            android:theme="@style/EditText"
            android:inputType="textPassword"
            android:maxLength="8"
            android:textColorHint="@color/color_979797"
            android:textColor="@color/white"
            android:hint="@string/hint_password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="10dp"
            android:theme="@style/EditText"
            android:inputType="textPassword"
            android:maxLength="8"
            android:textColorHint="@color/color_979797"
            android:textColor="@color/white"
            android:hint="@string/confirm_password"/>

    </LinearLayout>

    <com.wankrfun.crania.widget.GradientTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:enabled="false"
        app:textDrawable="@drawable/selector_login_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/get_wanke"/>

</RelativeLayout>