<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/first_job"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/first_job_tps"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.wankrfun.crania.widget.DrawableCenterTextView
                android:id="@+id/tv_student"
                android:layout_width="220dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_gray_5"
                android:drawableLeft="@drawable/icon_job_student"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/first_job_student"/>

            <com.wankrfun.crania.widget.DrawableCenterTextView
                android:id="@+id/tv_work"
                android:layout_width="220dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_gray_5"
                android:drawableLeft="@drawable/icon_job_work"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/color_E0E0E0"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/first_job_work"/>

            <com.wankrfun.crania.widget.DrawableCenterTextView
                android:id="@+id/tv_free"
                android:layout_width="220dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_gray_5"
                android:drawableLeft="@drawable/icon_job_free"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/color_E0E0E0"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/first_job_free"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>