<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ver="http://schemas.android.com/tools"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/register"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/register_tips"/>

        <com.wankrfun.crania.widget.VerificationCodeInputView
            android:id="@+id/tv_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            ver:box="4"
            ver:child_width="80"
            ver:child_h_padding="0"
            ver:child_v_padding="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_979797"
                android:text="@string/resend"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@color/color_979797"
                android:text="@string/second"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>