<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/first_sex"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/first_sex_tips"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <com.wankrfun.crania.widget.DrawableCenterTextView
                android:id="@+id/tv_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_gray_5"
                android:drawableLeft="@drawable/icon_sex_female"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/first_sex_female"/>

            <com.wankrfun.crania.widget.DrawableCenterTextView
                android:id="@+id/tv_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_gray_5"
                android:drawableLeft="@drawable/icon_sex_male"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/color_E0E0E0"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/first_sex_male"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>