<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/icon_bubbling_bg"
    android:layout_marginBottom="40dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_close"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_close"
        android:layout_marginLeft="40dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/first_play"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textColor="@color/color_979797"
        android:text="@string/first_play_tips"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_tips">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_play_restaurant"/>

            <fj.edittextcount.lib.FJEditTextCount
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:theme="@style/EditText"
                app:etHintColor="@color/color_979797"
                app:etMaxLength="10"
                app:etMinHeight="88dp"
                app:etPromptTextColor="@color/white"
                app:etPromptTextSize="15sp"
                app:etTextColor="@color/white"
                app:etTextSize="15sp"
                app:etType="percentage"
                app:etHint="@string/first_play_hint"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_979797"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>