<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/first_user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/first_user_tips"/>

        <com.wankrfun.crania.widget.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_user_upload"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray_5"
            android:textCursorDrawable="@drawable/cursor_color"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/color_545454"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:hint="@string/first_user_hint"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon_user_group"/>

    </LinearLayout>

</RelativeLayout>