<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/svg_icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/first_birthday"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_979797"
            android:text="@string/first_birthday_tips"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_FF2830"
            android:textSize="12sp"
            android:text="输入格式不正确 例：2000 01 01"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/shape_gray_5"
                android:textCursorDrawable="@drawable/cursor_color"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textColorHint="@color/color_545454"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:hint="@string/first_birthday_year"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_gray_5"
                android:textCursorDrawable="@drawable/cursor_color"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="@color/color_545454"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:hint="@string/first_birthday_month"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_gray_5"
                android:textCursorDrawable="@drawable/cursor_color"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="@color/color_545454"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:hint="@string/first_birthday_day"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_select"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_gray_5"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/color_545454"
            android:text="请选择出生日期"/>

    </LinearLayout>

    <com.wankrfun.crania.widget.GradientTextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:enabled="false"
        app:textDrawable="@drawable/selector_login_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="下一步 >>>" />

</RelativeLayout>