<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_black_top_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="取消"/>

            <com.wankrfun.crania.widget.GradientTextView
                android:id="@+id/tv_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:enabled="true"
                app:textDrawable="@drawable/selector_login_password"
                android:textSize="14sp"
                android:text="确定" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_student"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/shape_gray_5">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_student"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_job_student1"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/first_job_student"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_work"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/shape_gray_5"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_work"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_job_work1"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/first_job_work"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_free"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/shape_gray_5">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_free"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_job_free1"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/first_job_free"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>